# apt-plus

./: .dockerignore  .gitignore  .pre-commit-config.yaml  COLLABORATION.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  dry-test.yml  ruff.yml
_logs/: log.json
airflow/: init-notes.md
airflow/dags/: groceries_elt.py
airflow/tests/: groceries_elt_test.py  test_groceries_elt.py
apt_app/: apps.py  inspections.py  mixins.py  models.py  tests.py  views.py
apt_app/migrations/: 0001_initial.py  0002_amenity_crime_property_inspection_favoriteproperty_and_more.py  0003_inspectionsummary.py  0003_property_bus_stops.py  0004_alter_transitroute_geometry.py  0004_remove_inspectionsummary_property.py  0005_remove_transitroute_id_transitroute_route_id.py  0005_violation.py  0006_remove_violation_id_alter_violation_violation_id_and_more.py  0007_alter_violation_department_bureau.py  0008_alter_violation_violation_location.py  0009_alter_violation_violation_location.py  0010_alter_violation_violation_location.py  0011_merge_20250522_0057.py  0011_merge_20250522_0556.py  0012_alter_violation_inspection_category_savedproperty_and_more.py  0012_amenity_address_alter_violation_inspection_category.py  0013_savedproperty_address_and_more.py  0013_savedproperty_delete_favoriteproperty_and_more.py  0014_alter_property_groceries.py  0014_savedproperty_apt_app_sav_address_9e6c0c_idx_and_more.py  0015_rename_property_savedproperty_property_obj_and_more.py  0015_savedproperty_deleted_at_savedproperty_is_deleted_and_more.py  0016_alter_amenity.py  0016_rename_property_savedproperty_property_abcd.py  0016_rename_property_savedproperty_property_obj.py  (+3 more)
apt_app/views/: groceries.py  (+14 more)
apt_proj/: settings.py  urls.py  wsgi.py
config/: __init__.py  asgi.py  constants.json  constants.py  settings.py  urls.py  wsgi.py
data/: CTA_STOP_XFERS.txt
docs/: architecture.md  data_privacy.md  endpoints.md  readme.md
notebooks/: amenity_extract_load.ipynb  clean_crime.ipynb  data_manipulation_cta_stops_routes.ipynb  data_processing_stops_routes.ipynb  eda_crime.ipynb  fetch_shuttle_info.ipynb  import_manage_cta_stops.ipynb  insp_summ_perf_comparison.md  inspections.ipynb  load_crime.ipynb  prompts.md  transform_crime.ipynb
scripts/: amenity_transform.py  check_data_cta_ctops.py  check_data_cta_stops_routes.py  check_data_stops_routes.py  function_fetch_all_data.py  import_stops_routes_into_django.py  inspections_utils.py  transform_crime.py  transform_crime_bulk.py  transform_cta_stops.py  transform_cta_stops_routes.py
static/: constants.json
templates/: about.html  base.html  footer.html  home.html  map.html  navbar.html  return_to_property.html  saved_properties.html
tests/: README.md  conftest.py  test_bus_routes.py  test_bus_stops.py  test_constants.py  test_fetch_all_data.py  test_fetch_bus_stops.py  test_frontend_authentication.py  test_frontend_map_display.py  test_frontend_search.py  test_groceries.py  test_groceries_testdb.py  test_inspections.py  test_transform_crime.py
(+44 files in other folders)
