[project]
name = "apt-plus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["apt_app"]
