[project]
name = "apt-plus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2,<6",
    "django-allauth[mfa]>=65.7.0",
    "django-debug-toolbar>=5.1.0",
    "django-environ>=0.12.0,<1",
    "django-structlog>=9.1.0,<10",
    "django-typer>=3.1.0,<4",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "pytest-django>=4.11.1,<5",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "ruff>=0.11.4",
    "sqlalchemy>=2.0.40",
    "tqdm>=4.67.1",
    "whitenoise>=6.9.0,<7",
    "censusgeocode>=0.5.2",
    "requests-toolbelt>=0.10.1",
    "urllib3<2",
    "python-dotenv>=1.1.0",
    "django-anymail>=13.0",
    "pyjwt>=2.10.1",
    "pytest-cov>=6.1.1",
    "psycopg2-binary>=2.9.10",
    "passiogo>=0.2.2",
    "geojson>=3.2.0",
    "gunicorn>=23.0.0",
    "uvicorn>=0.34.2",
    "openai>=1.82.0",
    "duckdb>=1.3.0",
]

[tool.ruff]
line-length = 100
extend-exclude = ["*.ipynb"]
exclude = [
    "**/migrations/*.py",
]

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors - handles basic Python style
  "W", # pycodestyle warnings - handles whitespace issues
  "F", # pyflakes - handles unused imports and variables
  "N", # pep8-naming - handles naming conventions
]
ignore = [
  "F401", # allow unused imports (useful for assignments)
  "N818",
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
